--- a/src/main/resources/app/dashboard.fxml
+++ b/src/main/resources/app/dashboard.fxml
@@ -4,38 +4,76 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardController">
+<AnchorPane fx:id="rootPane" style="-fx-background-color: #f5f5f5;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardController"
+            >
 
+    <!-- FULLSCREEN CONTAINER -->
+    <BorderPane fx:id="mainBorderPane" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
 
-    <!-- TOP -->
-    <top>
-        <HBox alignment="CENTER" prefHeight="60">
-            <Label text="eDiploma" />
-        </HBox>
-    </top>
+        <!-- TOP BAR -->
+        <top>
+            <HBox alignment="CENTER_LEFT" prefHeight="60" spacing="20" style="-fx-background-color: white;                          -fx-border-color: #e0e0e0;                          -fx-border-width: 0 0 1 0;">
 
+                <padding>
+                    <Insets left="20" />
+                </padding>
 
-    <!-- LEFT -->
-    <left>
-        <VBox prefWidth="200" spacing="10">
-         <Button mnemonicParsing="false" style="-fx-background-color: transparent;" text="Početna">
-            <VBox.margin>
-               <Insets left="10.0" />
-            </VBox.margin>
-         </Button>
+                <Label style="-fx-font-size: 20;                               -fx-font-weight: bold;" text="eDiploma" />
+            </HBox>
+        </top>
 
-            <Separator />
-            <Label fx:id="lblOdjava" onMouseClicked="#handleLogout" style="-fx-cursor: hand; -fx-font-weight: bold;" text="Odjava" />
-        </VBox>
-    </left>
+        <!-- LEFT MENU -->
+        <left>
+            <VBox prefWidth="220" spacing="20.0" style="-fx-background-color: white; -fx-border-color: #e0e0e0; -fx-border-width: 0 1 0 0;">
 
+                <padding>
+                    <Insets top="20.0" />
+                </padding>
 
-    <!-- CENTER -->
-    <center>
-        <VBox spacing="10">
-            <Label text="Obavijesti" />
-        </VBox>
-    </center>
+                <Label fx:id="pocetnaLabel" onMouseClicked="#handlePocetnaClick" text="Početna">
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin></Label>
+                <Label fx:id="radoviLabel" onMouseClicked="#handleRadoviClick" text="Završni radovi">
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin></Label>
+                <Label fx:id="studentiLabel" onMouseClicked="#handleStudentiClick" text="Studenti">
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin></Label>
+                <Label fx:id="mentoriLabel" onMouseClicked="#handleMentoriClick" text="Mentori">
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin></Label>
 
+                <Region VBox.vgrow="ALWAYS" />
 
-</BorderPane>
+                <Separator>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin></Separator>
+
+                <Label fx:id="lblOdjava" onMouseClicked="#handleLogout" style="-fx-cursor: hand;                               -fx-font-weight: bold;                               -fx-text-fill: #d32f2f;" text="Odjava">
+               <VBox.margin>
+                  <Insets bottom="30.0" left="20.0" />
+               </VBox.margin></Label>
+            </VBox>
+        </left>
+
+        <!-- CENTER CONTENT -->
+        <center>
+            <StackPane style="-fx-background-color: #f9f9f9;">
+                <Label style="-fx-font-size: 18;                                  -fx-font-weight: bold;" text="Obavijesti" StackPane.alignment="TOP_CENTER">
+               <StackPane.margin>
+                  <Insets left="30.0" right="30.0" top="10.0" />
+               </StackPane.margin></Label>
+            <BorderPane.margin>
+               <Insets />
+            </BorderPane.margin>
+            </StackPane>
+        </center>
+
+    </BorderPane>
+
+</AnchorPane>
