--- a/src/main/resources/app/dashboard.fxml
+++ b/src/main/resources/app/dashboard.fxml
@@ -7,22 +7,19 @@
 <AnchorPane fx:id="rootPane" style="-fx-background-color: #f5f5f5;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardController"
             >
 
-    <!-- FULLSCREEN CONTAINER -->
     <BorderPane fx:id="mainBorderPane" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
 
-        <!-- TOP BAR -->
         <top>
             <HBox alignment="CENTER_LEFT" prefHeight="60" spacing="20" style="-fx-background-color: white;                          -fx-border-color: #e0e0e0;                          -fx-border-width: 0 0 1 0;">
 
                 <padding>
-                    <Insets left="20" />
+                    <Insets top="20" left="20" />
                 </padding>
 
                 <Label style="-fx-font-size: 20;                               -fx-font-weight: bold;" text="eDiploma" />
             </HBox>
         </top>
 
-        <!-- LEFT MENU -->
         <left>
             <VBox prefWidth="220" spacing="20.0" style="-fx-background-color: white; -fx-border-color: #e0e0e0; -fx-border-width: 0 1 0 0;">
 
